# proof_of_concept

./: Cargo.toml
src/: main.rs
src/actors/: branch.rs  customer.rs  doctor.rs  mod.rs  multi_branch.rs  prostitute.rs  registration_office.rs
