[package]
name = "single_channel"
version = "0.1.0"
authors = ["jendrik.mann@uni-oldenburg.de <gismo234>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams.git", branch = "chrysalis-2" }
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
anyhow = { version = "1.0", default-features = false }
tokio = {version = "1.1"}
dotenv = {version = "0.15.0"}
rand = "0.7.3"
futures = { version = "0.3.8", default-features = false  }